test/good/import/from.paka
return {
    "thing1": 1,
    "thing2": 2,
};