test/bad/types.paka
def add(l, r) {
    l + r;
};

add(1, "2");